test/netlist/error/cyclic-define.bop
#define X Y
#define Y Z
#define V W
#define Z V
#define V X
